--- a/.golangci.yml
+++ b/.golangci.yml
@@ -81,13 +81,17 @@ issues:
   max-same-issues: 0
   exclude-rules:
     - source: "^//\\s*go:generate\\s"
-      linters: lll
+      linters:
+        - lll
     - source: "(noinspection|TODO)"
-      linters: godot
+      linters:
+        - godot
     - source: "//noinspection"
-      linters: gocritic
+      linters:
+        - gocritic
     - source: "^\\s+if _, ok := err\\.\\([^.]+\\.InternalError\\); ok {"
-      linters: errorlint
+      linters:
+        - errorlint
     - path: "_test\\.go"
       linters:
         - bodyclose
