ci(workflow): add dockerfile linting

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -51,3 +51,19 @@ jobs:
         uses: golangci/golangci-lint-action@v2
         with:
           version: v1.44
+
+  lint-dockerfile:
+    runs-on: ubuntu-20.04
+    steps:
+      - name: Check out repository
+        uses: actions/checkout@v2
+
+      - name: Lint dockerfile (hadolint)
+        uses: hadolint/hadolint-action@v1.6.0
+
+      - name: Lint dockerfile (docker-lint)
+        uses: luke142367/Docker-Lint-Action@v1.1.1
+        with:
+          target: Dockerfile
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
