--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,18 +1,17 @@
 version: 2
 updates:
-  - package-ecosystem: "github-actions"
-    directory: "/"
+  - package-ecosystem: github-actions
+    directory: /
     schedule:
-      interval: "daily"
-
+      interval: daily
+    open-pull-requests-limit: 2
   - package-ecosystem: gomod
-    directory: "/"
+    directory: /
     schedule:
       interval: daily
     open-pull-requests-limit: 5
-
   - package-ecosystem: docker
-    directory: "/"
+    directory: /
     schedule:
       interval: daily
     open-pull-requests-limit: 2
