--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,6 +1,8 @@
 name: Test
 
 on:
+  workflow_call:
+
   push:
     branches: [ main ]
 
@@ -19,7 +21,7 @@ jobs:
       - name: Setup Go environment
         uses: actions/setup-go@v2.1.5
         with:
-          go-version: '1.17.6'
+          go-version: "1.17.6"
 
       - name: Test go project
         run: |
