--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -33,6 +33,7 @@ jobs:
         uses: avto-dev/markdown-lint@v1.5.0
         with:
           args: "**/*.md"
+          ignore: "CHANGELOG.md"
 
   lint-yaml:
     runs-on: ubuntu-20.04
