--- a/.github/workflows/thank.yml
+++ b/.github/workflows/thank.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Give thanks!
         if: steps.changed-dependencies.outputs.any_changed || github.event_name == 'workflow_dispatch'
         run: |
-          docker run -it --rm \
+          docker run --rm \
             -v $(pwd):/home \
             psampaz/gothanks:v0.4.0 \
             -y \
