--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -3,9 +3,11 @@ name: Publish
 on:
   push:
     branches: [ main ]
-    tags: [ 'v*' ]
+    tags: ["v*"]
+
   pull_request:
     branches: [ main ]
+
   workflow_dispatch:
 
 jobs:
@@ -16,8 +18,11 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Login to Docker registry
-        run: |
-          echo ${{ secrets.DOCKER_REGISTRY_TOKEN }} | docker login ghcr.io -u ${{ secrets.DOCKER_REGISTRY_ID }} --password-stdin
+        uses: docker/login-action@v1
+        with:
+          registry: ghcr.io
+          username: ${{ secrets.DOCKER_REGISTRY_ID }}
+          password: ${{ secrets.DOCKER_REGISTRY_TOKEN }}
 
       - name: Set up context
         id: project_context
