ci(workflow): exclude docker lint upon dependabot PR
See: https://github.com/luke142367/Docker-Lint-Action/issues/13

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -58,6 +58,7 @@ jobs:
 
   lint-dockerfile:
     runs-on: ubuntu-20.04
+    if: github.actor != 'dependabot[bot]'
     steps:
       - name: Check out repository
         uses: actions/checkout@v2
