--- a/.releaserc.yml
+++ b/.releaserc.yml
@@ -18,11 +18,22 @@ plugins:
               hasChanged: true
               numMatches: 1
               numReplacements: 1
+  - - "@semantic-release/exec"
+    - prepareCmd: |
+        make build-go-all
   - - "@semantic-release/github"
     - assets:
         - name: chains
           label: chains
           path: "./chains/**/*"
+        - label: Binary - Darwin amd64
+          path: "./target/dist/darwin/amd64/okp4d"
+        - label: Binary - Darwin arm64
+          path: "./target/dist/darwin/arm64/okp4d"
+        - label: Binary - Linux amd64
+          path: "./target/dist/linux/amd64/okp4d"
+        - label: Binary - Windows amd64
+          path: "./target/dist/windows/amd64/okp4d.exe"
   - - "@semantic-release/git"
     - assets:
         - CHANGELOG.md
