--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -47,6 +47,7 @@ jobs:
 
   lint-go:
     runs-on: ubuntu-20.04
+    timeout-minutes: 10
     steps:
       - name: Check out repository
         uses: actions/checkout@v2
