chore: json editor config

--- a/.editorconfig
+++ b/.editorconfig
@@ -16,5 +16,9 @@ indent_size = 2
 trim_trailing_whitespace = false
 indent_size = 2
 
+[*.json]
+trim_trailing_whitespace = false
+indent_size = 2
+
 [*.proto]
 indent_size = 2
