--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -148,6 +148,26 @@ jobs:
     env:
       GITHUB_TOKEN: ${{ secrets.OKP4_TOKEN }}
 
+  lint-genesis:
+    runs-on: ubuntu-20.04
+    steps:
+      - name: Check out repository
+        uses: actions/checkout@v3
+
+      - name: Setup Go environment
+        uses: actions/setup-go@v3.2.0
+        with:
+          go-version: "1.18.2"
+
+      - name: Build go project
+        run: |
+          make build
+
+      - name: Check testnet genesis files
+        run: |
+          ./target/dist/okp4d validate-genesis ./chains/testnet/pre-genesis.json
+          ./target/dist/okp4d validate-genesis ./chains/testnet/genesis.json
+
   lint-generated:
     runs-on: ubuntu-20.04
     steps:
