--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -51,31 +51,31 @@ jobs:
       - name: Initialize blockchain
         run: |
           okp4d init okp4-node \
-            --chain-id=okp4-testnet-1 \
-            --home ./target/deployment/testnet
+            --chain-id=okp4-devnet-1 \
+            --home ./target/deployment/devnet
 
-          cp ./chains/testnet/pre-genesis.json ./target/deployment/testnet/config/genesis.json
+          cp ./chains/devnet-1/pre-genesis.json ./target/deployment/devnet/config/genesis.json
 
           okp4d keys add validator \
-              --home ./target/deployment/testnet \
+              --home ./target/deployment/devnet \
               --keyring-backend test
 
           okp4d add-genesis-account validator 1000000000uknow \
-              --home ./target/deployment/testnet \
+              --home ./target/deployment/devnet \
               --keyring-backend test
 
-          okp4d gentx validator 1000000uknow --node-id $(okp4d tendermint show-node-id --home ./target/deployment/testnet) \
-              --chain-id okp4-testnet-1 \
-              --home ./target/deployment/testnet \
+          okp4d gentx validator 1000000uknow --node-id $(okp4d tendermint show-node-id --home ./target/deployment/devnet) \
+              --chain-id okp4-devnet-1 \
+              --home ./target/deployment/devnet \
               --keyring-backend test
 
           okp4d collect-gentxs \
-              --home ./target/deployment/testnet
+              --home ./target/deployment/devnet
 
       - name: Start the blockchain
         run: |
           okp4d start --moniker okp4-node \
-            --home ./target/deployment/testnet &
+            --home ./target/deployment/devnet &
 
       - name: Wait for blockchain to start
         uses: ifaxity/wait-on-action@v1
