--- a/.releaserc.yml
+++ b/.releaserc.yml
@@ -20,7 +20,7 @@ plugins:
               numReplacements: 1
   - - "@semantic-release/exec"
     - prepareCmd: |
-        make build-go-all
+        make build-go-linux-amd64 && make build-go-linux-arm64
   - - "@semantic-release/github"
     - assets:
         - name: testnet-genesis.json
@@ -29,18 +29,9 @@ plugins:
         - name: localnet-genesis.json
           label: localnet
           path: "./chains/localnet/genesis.json"
-        - name: okp4d_darwin_amd64
-          label: Binary - Darwin amd64
-          path: "./target/dist/darwin/amd64/okp4d"
-        - name: okp4d_darwin_arm64
-          label: Binary - Darwin arm64
-          path: "./target/dist/darwin/arm64/okp4d"
         - name: okp4d_linux_amd64
           label: Binary - Linux amd64
           path: "./target/dist/linux/amd64/okp4d"
-        - name: okp4d_windows_amd64.exe
-          label: Binary - Windows amd64
-          path: "./target/dist/windows/amd64/okp4d.exe"
   - - "@semantic-release/git"
     - assets:
         - CHANGELOG.md
