ci(lint): fix ignite version

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -183,7 +183,7 @@ jobs:
 
       - name: Install Ignite CLI
         run: |
-          curl https://get.ignite.com/cli! | bash
+          curl https://get.ignite.com/cli@v0.22.2! | bash
 
       - name: Generate OpenAPI spec for the chain
         run: |
@@ -192,7 +192,7 @@ jobs:
 
       - name: Check Git diff in generated files (openapi.yml)
         run: |
-          if [[ $(git status -s | grep -v 'go.mod$' | grep -v 'go.sum$' ) != "" ]]; then
+          if [[ $(git status -s | grep -v 'go.mod$' | grep -v 'go.sum$') != "" ]]; then
             >&2 echo "❌ There is a diff between generated files and source code"
             >&2 git status
             exit 1
