ci: add a publish step to upload readme to dockerhub

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -2,8 +2,8 @@ name: Publish
 
 on:
   push:
-    branches: [ main ]
-    tags: [ "v*" ]
+    branches: [main]
+    tags: ["v*"]
 
 concurrency:
   group: publish-${{ github.ref }}
@@ -53,3 +53,28 @@ jobs:
           push: true
           tags: ${{ steps.docker_metadata.outputs.tags }}
           labels: ${{ steps.docker_metadata.outputs.labels }}
+
+  dockerhub-description:
+    runs-on: ubuntu-20.04
+    steps:
+      - name: Check out repository
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 2
+
+      - name: Find change in readme file
+        id: readme-change
+        uses: tj-actions/changed-files@v24
+        with:
+          files: |
+            README.md
+
+      - name: Docker Hub Description
+        if: steps.readme-change.outputs.any_changed == 'true'
+        uses: peter-evans/dockerhub-description@v3
+        with:
+          username: okp4
+          description: Docker image for https://github.com/okp4/okp4d
+          password: ${{ secrets.DOCKER_HUB_REGISTRY_TOKEN }}
+          repository: okp4/okp4d
+          readme-filepath: README.md
