--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -42,7 +42,7 @@ jobs:
       - name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
-          username: okp4
+          username: ${{ secrets.DOCKER_HUB_REGISTRY_ID }}
           password: ${{ secrets.DOCKER_HUB_REGISTRY_TOKEN }}
 
       - name: Build and publish image(s)
