ci: update webhook settings

--- a/.github/workflows/release-discord-notify.yml
+++ b/.github/workflows/release-discord-notify.yml
@@ -11,13 +11,16 @@ jobs:
     - name: Notify Discord
       uses: fjogeleit/http-request-action@v1
       with:
-        url: ${{ secrets.discord_webhook }}
+        url: ${{ secrets.OKP4_DISCORD_WEBHOOK }}
         method: 'POST'
         customHeaders: '{"Content-Type": "application/json"}'
-        data: '{"content": "
-        🚨 A new version of @${{github.repository}} ${{ github.event.tagName }} has been released! 🎉
-
-        👉 Changelog: https://github.com/${{ github.repository }/releases/tag/${{ github.event.tagName }}
-        👉 Official repo: https://github.com/${{ github.repository }
+        data: '{
+            "avatar_url": "https://avatars.githubusercontent.com/u/98603954?v=4",
+            "username": "Bot Anik",
+            "content": "
+            🚨 A new version of @${{github.repository}} ${{ github.event.tagName }} has been released! 🎉
+            
+            👉 Changelog: https://github.com/${{ github.repository }/releases/tag/${{ github.event.tagName }}
+            👉 Official repo: https://github.com/${{ github.repository }
 
         "}'
