--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -87,6 +87,12 @@ jobs:
             go.mod
             go.sum
 
+      - name: Setup Go environment
+        uses: actions/setup-go@v3.3.0
+        if: steps.changed-go-files.outputs.any_changed == 'true'
+        with:
+          go-version: "1.18.2"
+
       - name: Lint go code (golangci-lint)
         uses: golangci/golangci-lint-action@v3
         if: steps.changed-go-files.outputs.any_changed == 'true'
