--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,6 +14,37 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
+  
+  build-proto:
+    runs-on: ubuntu-20.04
+    steps:
+      - name: Check out repository
+        uses: actions/checkout@v3
+
+      - name: Setup Go environment
+        uses: actions/setup-go@v3.3.0
+        with:
+          go-version: "1.19"
+
+      - name: Build proto
+        run: |
+          make build-proto
+
+  generate-proto:
+    runs-on: ubuntu-20.04
+    steps:
+      - name: Check out repository
+        uses: actions/checkout@v3
+
+      - name: Setup Go environment
+        uses: actions/setup-go@v3.3.0
+        with:
+          go-version: "1.19"
+
+      - name: Generate proto
+        run: |
+          make generate-proto       
+    
   build-go:
     runs-on: ubuntu-20.04
     steps:
