--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -41,6 +41,12 @@ jobs:
         with:
           go-version: "1.19"
 
+      - name: Add protobuf dependencies
+        run: |
+          go install google.golang.org/protobuf/cmd/protoc-gen-go@v1.28 \
+          && go install google.golang.org/grpc/cmd/protoc-gen-go-grpc@v1.2 \
+          && go install github.com/grpc-ecosystem/grpc-gateway/v2/protoc-gen-openapiv2
+
       - name: Setup buf
         uses: bufbuild/buf-setup-action@v1
 
