--- a/.releaserc.yml
+++ b/.releaserc.yml
@@ -22,12 +22,24 @@ plugins:
               numReplacements: 1
   - - "@semantic-release/exec"
     - prepareCmd: |
-        make build-go-linux-amd64
+        make release-assets
   - - "@semantic-release/github"
     - assets:
-        - name: okp4d_linux_amd64
-          label: Binary - Linux amd64
-          path: "./target/dist/linux/amd64/okp4d"
+        - name: okp4d-${nextRelease.version}-linux-amd64
+          label: okp4d-${nextRelease.version}-linux-amd64
+          path: "./target/release/okp4d-${nextRelease.version}-linux-amd64"
+        - name: okp4d-${nextRelease.version}-linux-amd64.tar.gz
+          label: okp4d-${nextRelease.version}-linux-amd64.tar.gz
+          path: "./target/release/okp4d-${nextRelease.version}-linux-amd64.tar.gz"
+        - name: okp4d-${nextRelease.version}-linux-arm64
+          label: okp4d-${nextRelease.version}-linux-arm64
+          path: "./target/release/okp4d-${nextRelease.version}-linux-arm64"
+        - name: okp4d-${nextRelease.version}-linux-arm64.tar.gz
+          label: okp4d-${nextRelease.version}-linux-arm64.tar.gz
+          path: "./target/release/okp4d-${nextRelease.version}-linux-arm64.tar.gz"
+        - name: sha256sum.txt
+          label: sha256sum.txt
+          path: "./target/release/sha256sum.txt"
   - - "@semantic-release/git"
     - assets:
         - CHANGELOG.md
