docs: generate protobuf markdown documentation

--- a/buf.gen.proto.yaml
+++ b/buf.gen.proto.yaml
@@ -10,3 +10,9 @@ plugins:
     out: .
     opt:
       - logtostderr=true
+        
+  - name: doc
+    out: ./docs/proto
+    opt:
+      - ./docs/proto/protodoc-markdown.tmpl,docs.md
+    strategy: all
