--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -135,7 +135,15 @@ jobs:
       - name: Check out repository
         uses: actions/checkout@v3
 
+      - name: Find changed proto files
+        id: changed-proto-files
+        uses: tj-actions/changed-files@v31.0.3
+        with:
+          files: |
+            proto/**/*.proto
+
       - name: Lint proto files
+        if: steps.changed-proto-files.outputs.any_changed == 'true'
         run: |
           make lint-proto
 
