ci(commands): add action to publish on docs

--- a/.github/workflows/notify-release.yml
+++ b/.github/workflows/notify-release.yml
@@ -24,7 +24,7 @@ jobs:
   update-docs:
     runs-on: ubuntu-22.04
     steps:
-      - name: Update docs repository
+      - name: Update modules docs repository
         uses: fjogeleit/http-request-action@v1
         with:
           url: 'https://api.github.com/repos/okp4/docs/actions/workflows/update-versioned-docs/dispatches'
@@ -38,6 +38,23 @@ jobs:
                 "repository": "${{github.repository}}",
                 "section": "modules",
                 "docs_directory": "docs/proto/*"
+              }
+            }
+
+      - name: Update commands docs repository
+        uses: fjogeleit/http-request-action@v1
+        with:
+          url: 'https://api.github.com/repos/okp4/docs/actions/workflows/update-versioned-docs/dispatches'
+          method: 'POST'
+          customHeaders: '{"Accept": "application/vnd.github+json", "Authorization": "Bearer ${{ secrets.OKP4_TOKEN }}"}'
+          data: |-
+            {
+              "ref": "main",
+              "inputs": {
+                "version": "${{ github.event.release.tag_name }}",
+                "repository": "${{github.repository}}",
+                "section": "commands",
+                "docs_directory": "docs/command/*"
               }
             }
 
