--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -35,7 +35,7 @@ jobs:
   test-go:
     runs-on: ubuntu-22.04
     needs: check-tests
-    if: needs.check-tests.status
+    if: needs.check-tests.outputs.status
     steps:
       - name: Check out repository
         uses: actions/checkout@v3
@@ -53,7 +53,7 @@ jobs:
     runs-on: ubuntu-22.04
     timeout-minutes: 10
     needs: check-tests
-    if: needs.check-tests.status
+    if: needs.check-tests.outputs.status
     steps:
       - name: Check out repository
         uses: actions/checkout@v3
